welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:15: error: not found: value c
setCouleurBrosse(c : Color)
                 ^FlowerPot:20: error: not found: value c
setCouleurBrosse(c : Color)
                 ^